projects/vb6parse/snapshots/tests/library/conversion/cverr/cverr_in_collection.snap
---
source: projects/vb6parse/tests/library/conversion/cverr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: errors
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Add
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: CVErr
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "2042"
                    - kind: RightParenthesis
                      text: )
        - kind: Newline
          text: "\n"
