projects/vb6parse/snapshots/tests/library/conversion/cverr/cverr_in_do_loop.snap
---
source: projects/vb6parse/tests/library/conversion/cverr.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DoStatement
      children:
        - kind: DoKeyword
          text: Do
        - kind: Whitespace
          text: " "
        - kind: WhileKeyword
          text: While
        - kind: Whitespace
          text: " "
        - kind: UnaryExpression
          children:
            - kind: NotKeyword
              text: Not
            - kind: Whitespace
              text: " "
            - kind: MemberAccessExpression
              children:
                - kind: Identifier
                  text: rs
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: EOF
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: IfStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: IfKeyword
                  text: If
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: IsNull
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: CallExpression
                              children:
                                - kind: Identifier
                                  text: rs
                                - kind: LeftParenthesis
                                  text: (
                                - kind: ArgumentList
                                  children:
                                    - kind: Argument
                                      children:
                                        - kind: StringLiteralExpression
                                          children:
                                            - kind: StringLiteral
                                              text: "\"Value\""
                                - kind: RightParenthesis
                                  text: )
                    - kind: RightParenthesis
                      text: )
                - kind: Whitespace
                  text: " "
                - kind: ThenKeyword
                  text: Then
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: Whitespace
                      text: "        "
                    - kind: AssignmentStatement
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: result
                        - kind: Whitespace
                          text: " "
                        - kind: EqualityOperator
                          text: "="
                        - kind: Whitespace
                          text: " "
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: CVErr
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "2042"
                            - kind: RightParenthesis
                              text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: EndKeyword
                  text: End
                - kind: Whitespace
                  text: " "
                - kind: IfKeyword
                  text: If
                - kind: Newline
                  text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: rs
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: MoveNext
                - kind: Newline
                  text: "\n"
        - kind: LoopKeyword
          text: Loop
        - kind: Newline
          text: "\n"
